log
Thu Mar 26 11:09:46 PM UTC 2026: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
fbba849
Thu Mar 26 11:36:17 PM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:9: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   49 |     list->next = auxNode;
      |         ^~
list.c: In function ‘nextList’:
list.c:54:27: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   54 |     Node* siguiente = list->next;
      |                           ^~
list.c:57:12: error: ‘dato’ undeclared (first use in this function); did you mean ‘¨dato’?
   57 |     return dato;
      |            ^~~~
      |            ¨dato
list.c:57:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:55:10: error: unused variable ‘¨dato’ [-Werror=unused-variable]
   55 |     void*¨dato = siguiente->data;
      |          ^~~~~
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
9955c94
Thu Mar 26 11:36:40 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:9: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   49 |     list->next = auxNode;
      |         ^~
list.c: In function ‘nextList’:
list.c:57:12: error: ‘dato’ undeclared (first use in this function); did you mean ‘¨dato’?
   57 |     return dato;
      |            ^~~~
      |            ¨dato
list.c:57:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:55:10: error: unused variable ‘¨dato’ [-Werror=unused-variable]
   55 |     void*¨dato = siguiente->data;
      |          ^~~~~
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
d8c8569
Thu Mar 26 11:37:00 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:12: error: ‘dato’ undeclared (first use in this function); did you mean ‘¨dato’?
   57 |     return dato;
      |            ^~~~
      |            ¨dato
list.c:57:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:55:10: error: unused variable ‘¨dato’ [-Werror=unused-variable]
   55 |     void*¨dato = siguiente->data;
      |          ^~~~~
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
7442d1d
Thu Mar 26 11:39:07 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:12: error: ‘dato’ undeclared (first use in this function); did you mean ‘¨dato’?
   57 |     return dato;
      |            ^~~~
      |            ¨dato
list.c:57:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:55:10: error: unused variable ‘¨dato’ [-Werror=unused-variable]
   55 |     void*¨dato = siguiente->data;
      |          ^~~~~
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
d30b820
Thu Mar 26 11:39:24 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
db54f85
Thu Mar 26 11:39:57 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d0c25f4
Thu Mar 26 11:40:34 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:58:10: error: ‘auxNode’ undeclared (first use in this function); did you mean ‘Node’?
   58 |     free(auxNode);
      |          ^~~~~~~
      |          Node
list.c:58:10: note: each undeclared identifier is reported only once for each function it appears in
488b3f0
Thu Mar 26 11:40:56 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6030c1d
Thu Mar 26 11:42:51 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8c3e18b
Thu Mar 26 11:44:07 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4bfab20
Thu Mar 26 11:46:08 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d3e4773
Thu Mar 26 11:47:10 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
a9a9e89
Thu Mar 26 11:47:35 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b22582f
Thu Mar 26 11:51:30 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
c9842a2
Thu Mar 26 11:54:10 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
002f245
Thu Mar 26 11:56:17 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
af9abd4
